--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
               <img
                 class="h-8 w-auto"
                 src="img/simbiatuu-logo.png"
-                alt="Workflow"
+                alt="simbiatuu"
                 [routerLink]="['/']"
               />
             </div>
