--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -26,7 +26,7 @@
           class="flex flex-col sm:flex-row justify-center md:justify-start gap-4"
         >
           <button
-            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-white text-[#e35336] backdrop-blur transition-all hover:bg-[#e35336a0]"
+            class="custom-button group relative inline-flex items-center justify-between gap-3 px-6 py-3 rounded-full bg-[#eb002b] text-[#fff] backdrop-blur transition-all hover:bg-[#eb002b]"
             [routerLink]="['/contact']"
             routerLinkActive="router-link-active"
           >
