--- a/src/app/page/index/index.component.html
+++ b/src/app/page/index/index.component.html
@@ -101,7 +101,7 @@
       </p>
       <a
         href="#services"
-        class="bg-white text-[#c86635] font-semibold px-8 py-4 rounded-full shadow-lg hover:bg-purple-100 transition"
+        class="bg-white text-[black] font-semibold px-8 py-4 rounded-full shadow-lg hover:bg-purple-100 transition"
       >
         Let’s unlock your next level of success
       </a>
